--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
       "start": "nodemon server.js"
    },
    "dependencies": {
+      "cors": "^2.8.5",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "mongoose": "^6.7.5",
