--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -7,7 +7,8 @@
    "scripts": {
       "dev": "vite",
       "build": "vite build",
-      "preview": "vite preview"
+      "preview": "vite preview",
+      "lint": "eslint --max-warnings=0 src"
    },
    "dependencies": {
       "axios": "^1.2.1",
@@ -22,6 +23,8 @@
       "@types/react-dom": "^18.0.8",
       "@vitejs/plugin-react": "^2.2.0",
       "autoprefixer": "^10.4.13",
+      "eslint": "^8.29.0",
+      "eslint-config-react-app": "^7.0.1",
       "postcss": "^8.4.19",
       "tailwindcss": "^3.2.4",
       "vite": "^3.2.3"
