--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -16,7 +16,8 @@
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-query": "^3.39.2",
-      "react-router-dom": "^6.4.4"
+      "react-router-dom": "^6.4.4",
+      "react-spinners": "^0.13.7"
    },
    "devDependencies": {
       "@types/react": "^18.0.24",
