--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -7,10 +7,13 @@
       "start": "nodemon server.js"
    },
    "dependencies": {
+      "bcrypt": "^5.1.0",
       "cors": "^2.8.5",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
+      "jsonwebtoken": "^8.5.1",
       "mongoose": "^6.7.5",
-      "nodemon": "^2.0.20"
+      "nodemon": "^2.0.20",
+      "validator": "^13.7.0"
    }
 }
