--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -11,6 +11,7 @@
       "lint": "eslint --max-warnings=0 src"
    },
    "dependencies": {
+      "@headlessui/react": "^1.7.5",
       "axios": "^1.2.1",
       "date-fns": "^2.29.3",
       "react": "^18.2.0",
