--- a/server/package.json
+++ b/server/package.json
@@ -1,36 +1,20 @@
 {
-   "proxy": "http://localhost:3000",
    "name": "MERN_BLOG",
-   "private": true,
-   "version": "0.0.0",
-   "type": "module",
+   "version": "1.0.0",
+   "main": "index.js",
+   "license": "MIT",
    "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "preview": "vite preview",
-      "lint": "eslint --max-warnings=0 src"
+      "start": "nodemon server.js"
    },
    "dependencies": {
-      "@headlessui/react": "^1.7.5",
-      "axios": "^1.2.1",
-      "date-fns": "^2.29.3",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "react-query": "^3.39.2",
-      "react-router-dom": "^6.4.4",
-      "react-spinners": "^0.13.7"
-   },
-   "devDependencies": {
-      "@types/react": "^18.0.24",
-      "@types/react-dom": "^18.0.8",
-      "@vitejs/plugin-react": "^2.2.0",
-      "autoprefixer": "^10.4.13",
-      "eslint": "^8.29.0",
-      "eslint-config-react-app": "^7.0.1",
-      "postcss": "^8.4.19",
-      "tailwindcss": "^3.2.4",
-      "vite": "^3.2.3"
-   },
-   "main": "index.js",
-   "license": "MIT"
+      "bcrypt": "^5.1.0",
+      "cors": "^2.8.5",
+      "dotenv": "^16.0.3",
+      "express": "^4.18.2",
+      "jsonwebtoken": "^8.5.1",
+      "mongoose": "^6.7.5",
+      "multer": "^1.4.5-lts.1",
+      "nodemon": "^2.0.20",
+      "validator": "^13.7.0"
+   }
 }
