--- a/client/package.json
+++ b/client/package.json
@@ -1,36 +1,36 @@
 {
-   "proxy": "http://localhost:3000",
-   "name": "MERN_BLOG",
-   "private": true,
-   "version": "0.0.0",
-   "type": "module",
-   "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "preview": "vite preview",
-      "lint": "eslint --max-warnings=0 src"
-   },
-   "dependencies": {
-      "@headlessui/react": "^1.7.5",
-      "axios": "^1.2.1",
-      "date-fns": "^2.29.3",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "react-query": "^3.39.2",
-      "react-router-dom": "^6.4.4",
-      "react-spinners": "^0.13.7"
-   },
-   "devDependencies": {
-      "@types/react": "^18.0.24",
-      "@types/react-dom": "^18.0.8",
-      "@vitejs/plugin-react": "^2.2.0",
-      "autoprefixer": "^10.4.13",
-      "eslint": "^8.29.0",
-      "eslint-config-react-app": "^7.0.1",
-      "postcss": "^8.4.19",
-      "tailwindcss": "^3.2.4",
-      "vite": "^3.2.3"
-   },
-   "main": "index.js",
-   "license": "MIT"
+  "proxy": "https://bmern.onrender.com/",
+  "name": "MERN_BLOG",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint --max-warnings=0 src"
+  },
+  "dependencies": {
+    "@headlessui/react": "^1.7.5",
+    "axios": "^1.2.1",
+    "date-fns": "^2.29.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.2",
+    "react-router-dom": "^6.4.4",
+    "react-spinners": "^0.13.7"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.29.0",
+    "eslint-config-react-app": "^7.0.1",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
+    "vite": "^3.2.3"
+  },
+  "main": "index.js",
+  "license": "MIT"
 }
